# GaussianSplatting

./: CMakeLists.txt  CMakePresets.json
Render/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  Main.cpp
Render/app/: App.cpp  App.h
Render/io/: PlyGaussianVertex.h  PlyLoader.cpp  PlyLoader.h
Render/math/: Transform.cpp  Transform.h
Render/render/: PointRenderer.cpp  PointRenderer.h
Render/scene/: Camera.cpp  Camera.h  PointCloud.h
